--- a/StepOverflow/Areas/Authentication/Views/Auth/SignIn.cshtml
+++ b/StepOverflow/Areas/Authentication/Views/Auth/SignIn.cshtml
@@ -1,7 +1,8 @@
 ﻿@model StepOverflow.Areas.Register.Models.SignInViewModel
 
+@Html.Raw(TempData["msg"]);
 @{
-    ViewData["Title"] = "SignIn";
+	ViewData["Title"] = "SignIn";
 }
 
 <div class="container h-100">
@@ -14,8 +15,8 @@
 
 							<p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Welcome!</p>
 
-							<form class="mx-1 mx-md-4" asp-action="SignIn">
-			<div asp-validation-summary="ModelOnly" class="text-danger"></div> 
+							<form class="mx-1 mx-md-4" asp-action="SignIn" >
+								<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 								<div class="d-flex flex-row align-items-center mb-4">
 									<i class="fas fa-user fa-lg me-3 fa-fw"></i>
 									<div class="form-outline flex-fill mb-0">
@@ -50,5 +51,7 @@
 	</div>
 </div>
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+	await Html.RenderPartialAsync("_ValidationScriptsPartial");
+}
 }
