layout fixed,post and users view created.

--- a/StepOverflow/wwwroot/css/nav-bar_style.css
+++ b/StepOverflow/wwwroot/css/nav-bar_style.css
@@ -181,6 +181,6 @@ a {
     }
 }
 
-.stepIcon {
-    background: url('../assets/stepoverflow-logo.png');
+.nav_menu_name_text {
+    text-decoration:none;
 }
