--- a/StepOverflow/Areas/Authentication/Views/Auth/SignUp.cshtml
+++ b/StepOverflow/Areas/Authentication/Views/Auth/SignUp.cshtml
@@ -1,60 +1,65 @@
 ﻿@model StepOverflow.Areas.Register.Models.SignUpViewModel
-@Html.Raw(TempData["msg"]);
+@Html.Raw(TempData["msg"])
 @{
 	ViewData["Title"] = "SignUp";
 }
-<div class="container h-100">
-	<div class="row d-flex justify-content-center align-items-center h-100">
-		<div class="col-lg-12 col-xl-11">
-			<div class="card text-black" style="border-radius: 25px;">
-				<div class="card-body p-md-5">
-					<div class="row justify-content-center">
-						<div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+@*
+	<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+	<input asp-for="Username" type="text" id="form3Example1c" class="form-control" />
+	<label asp-for="Username" class="form-label"></label>
 
-							<p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Welcome!</p>
+	<input asp-for="Email" type="email" id="form3Example3c" class="form-control" />
+	<label asp-for="Email" class="form-label"></label>
 
-							<form class="mx-1 mx-md-4" asp-action="SignUp">
-			<div asp-validation-summary="ModelOnly" class="text-danger"></div> 
-								<div class="d-flex flex-row align-items-center mb-4">
-									<i class="fas fa-user fa-lg me-3 fa-fw"></i>
-									<div class="form-outline flex-fill mb-0">
-										<input asp-for="Username" type="text" id="form3Example1c" class="form-control" />
-										<label asp-for="Username" class="form-label"></label>
-									</div>
-								</div>
+	<input asp-for="Password" type="password" id="form3Example4c" class="form-control" />
+	<label asp-for="Password" class="form-label"></label>
 
-								<div class="d-flex flex-row align-items-center mb-4">
-									<i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-									<div class="form-outline flex-fill mb-0">
-										<input asp-for="Email" type="email" id="form3Example3c" class="form-control" />
-										<label asp-for="Email" class="form-label"></label>
-									</div>
-								</div>
-
-								<div class="d-flex flex-row align-items-center mb-4">
-									<i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-									<div class="form-outline flex-fill mb-0">
-										<input asp-for="Password" type="password" id="form3Example4c" class="form-control" />
-										<label asp-for="Password" class="form-label"></label>
-									</div>
-								</div>
-
-								<div class="form-group">
-									<input type="submit" value="Sign Up" class="btn btn-primary" />
-								</div>
-							</form>
-
-						</div>
-						<div class="col-md-10 col-lg-6 col-xl-6 d-flex align-items-center order-1 order-lg-2">
-
-							<img src="~/assets/stepoverflow-logo.png" class="img-fluid" alt="stepover-flow logo">
-
-						</div>
-					</div>
-				</div>
+	<input type="submit" value="Sign Up" class="btn btn-primary" />
+	</form>
+	*@
+<div class="form-v10-content">
+	<form class="form-detail" asp-action="SignUp">
+		<div class="form-left">
+			<h2>General Infomation</h2>
+			<div class="form-row">
+				<input asp-for="Username" type="text" id="form3Example1c" class="input-text" placeholder="Username" required />
+			</div>
+			<div class="form-row">
+				<input asp-for="Password" type="password" id="form3Example4c" class="input-text" placeholder="Password" required />
+			</div>
+			<div class="form-row">
+				<input asp-for="Password" type="password" id="form3Example4c" class="input-text" placeholder="Repeat Password" required />
+			</div>
+			<div class="form-row">
+				<input asp-for="Location" type="text" id="form3Example4c" class="input-text" placeholder="Location" required />
 			</div>
 		</div>
-	</div>
+		<div class="form-right">
+			<h2>Contact Details</h2>
+			<div class="form-row">
+				<input asp-for="Biography" type="text" id="form3Example4c" class="input-text" placeholder="Short Bio" required />
+			</div>
+			<div class="form-group">
+				<div class="form-row">
+					<input asp-for="PhoneNumber" type="text" id="form3Example4c" class="input-text" placeholder="Phone Number" required />
+				</div>
+			</div>
+			<div class="form-row">
+				<input asp-for="Email" type="text" id="form3Example4c" class="input-text" placeholder="Email" required />
+			</div>
+			<div class="form-checkbox">
+				<label class="container">
+					<p>I do accept the <a href="#" class="text">Terms and Conditions</a> of your site.</p>
+					<input type="checkbox" name="checkbox">
+					<span class="checkmark"></span>
+				</label>
+			</div>
+			<div class="form-row-last">
+				<input type="submit" class="register" value="Sign Up">
+
+			</div>
+		</div>
+	</form>
 </div>
 
 @section Scripts {
