--- a/StepOverflow/Areas/Authentication/Views/Auth/SignIn.cshtml
+++ b/StepOverflow/Areas/Authentication/Views/Auth/SignIn.cshtml
@@ -1,57 +1,76 @@
-﻿@model StepOverflow.Areas.Register.Models.SignInViewModel
+﻿@*@model StepOverflow.Areas.Register.Models.SignInViewModel
 
-@Html.Raw(TempData["msg"]);
-@{
+	@Html.Raw(TempData["msg"])
+	@{
 	ViewData["Title"] = "SignIn";
-}
+	}
 
-<div class="container h-100">
-	<div class="row d-flex justify-content-center align-items-center h-100">
-		<div class="col-lg-12 col-xl-11">
-			<div class="card text-black" style="border-radius: 25px;">
-				<div class="card-body p-md-5">
-					<div class="row justify-content-center">
-						<div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-
-							<p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Welcome!</p>
-
-							<form class="mx-1 mx-md-4" asp-action="SignIn" >
-								<div asp-validation-summary="ModelOnly" class="text-danger"></div>
-								<div class="d-flex flex-row align-items-center mb-4">
-									<i class="fas fa-user fa-lg me-3 fa-fw"></i>
-									<div class="form-outline flex-fill mb-0">
-										<input asp-for="Username" type="text" id="form3Example1c" class="form-control" />
-										<label asp-for="Username" class="form-label"></label>
-									</div>
-								</div>
-
-								<div class="d-flex flex-row align-items-center mb-4">
-									<i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-									<div class="form-outline flex-fill mb-0">
-										<input asp-for="Password" type="password" id="form3Example4c" class="form-control" />
-										<label asp-for="Password" class="form-label"></label>
-									</div>
-								</div>
-
-								<div class="form-group">
-									<input type="submit" value="Sign Up" class="btn btn-primary" />
-								</div>
-							</form>
-
+	<div class="form-v10-content">
+	<form class="form-detail" asp-action="SignIn">
+	<div class="form-left">
+	<h2>Sign In</h2>
+	<div class="form-row">
+	<input asp-for="Username" type="text" id="form3Example1c" class="input-text" placeholder="Username" required />
+	</div>
+	<div class="form-row">
+	<input asp-for="Password" type="password" id="form3Example4c" class="input-text" placeholder="Password" required />
+	</div>
+	<div class="form-row-last">
+	<input type="submit" class="btn btn-primary" value="Sign In">
+	</div>
+	</div>
+	</form>
+	</div>
+	@section Scripts {
+	@{
+	await Html.RenderPartialAsync("_ValidationScriptsPartial");
+	}
+	}
+*@
+@model StepOverflow.Areas.Register.Models.SignInViewModel
+			<div class="row login-form">
+				<div class="col-sm-4 col-sm-offset-1">
+					<form role="form" action="" method="post" class="l-form">
+						<div class="form-group">
+							<label class="sr-only" for="l-form-username">Username</label>
+							<input type="text" name="l-form-username" placeholder="Username..." class="l-form-username form-control" id="l-form-username">
 						</div>
-						<div class="col-md-10 col-lg-6 col-xl-6 d-flex align-items-center order-1 order-lg-2">
-
-							<img src="~/assets/stepoverflow-logo.png" class="img-fluid" alt="stepover-flow logo">
-
+						<div class="form-group">
+							<label class="sr-only" for="l-form-password">Password</label>
+							<input type="password" name="l-form-password" placeholder="Password..." class="l-form-password form-control" id="l-form-password">
+						</div>
+						<button type="submit" class="btn">Sign in!</button>
+					</form>
+					<div class="social-login">
+						<p>Or login with:</p>
+						<div class="social-login-buttons">
+							<a class="btn btn-link-1" href="#"><i class="fa fa-facebook"></i></a>
+							<a class="btn btn-link-1" href="#"><i class="fa fa-twitter"></i></a>
+							<a class="btn btn-link-1" href="#"><i class="fa fa-google-plus"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-6 forms-right-icons">
+					<div class="row">
+						<div class="col-sm-2 icon"><i class="fa fa-user"></i></div>
+						<div class="col-sm-10">
+							<h3>New Features</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-2 icon"><i class="fa fa-eye"></i></div>
+						<div class="col-sm-10">
+							<h3>Easy To Use</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-2 icon"><i class="fa fa-twitter"></i></div>
+						<div class="col-sm-10">
+							<h3>Social Integrated</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>
-</div>
-@section Scripts {
-    @{
-	await Html.RenderPartialAsync("_ValidationScriptsPartial");
-}
-}
