--- a/StepOverflow/Areas/Authentication/Views/Auth/SignUp.cshtml
+++ b/StepOverflow/Areas/Authentication/Views/Auth/SignUp.cshtml
@@ -1,69 +1,127 @@
 ﻿@model StepOverflow.Areas.Register.Models.SignUpViewModel
-@Html.Raw(TempData["msg"])
-@{
-	ViewData["Title"] = "SignUp";
+	@Html.Raw(TempData["msg"])
+	@{
+	ViewData["title"] = "SignUp";
 }
-@*
-	<div asp-validation-summary="ModelOnly" class="text-danger"></div>
-	<input asp-for="Username" type="text" id="form3Example1c" class="form-control" />
-	<label asp-for="Username" class="form-label"></label>
+@*	<div id="app-cover">
 
-	<input asp-for="Email" type="email" id="form3Example3c" class="form-control" />
-	<label asp-for="Email" class="form-label"></label>
+	<h1 id="heading">Sign Up</h1>
 
-	<input asp-for="Password" type="password" id="form3Example4c" class="form-control" />
-	<label asp-for="Password" class="form-label"></label>
+	<form asp-action="SignUp">
 
-	<input type="submit" value="Sign Up" class="btn btn-primary" />
+	<div id="inp-box-cover">
+
+	<div id="inp-padd">
+
+	<div class="inp-box" id="email">
+
+	<input type="email" asp-for="Email" class="inp" placeholder="Your email address" required>
+
+	</div>
+
+	<div class="inp-box" id="username">
+
+	<input type="text" class="inp" placeholder="Your username" asp-for="Username" class="inp" required>
+
+	</div>
+
+	<div class="inp-box" id="password">
+
+	<input type="password" class="inp" placeholder="Password (8 char,1 up,1 down,symbol:!#$)" asp-for="Password">
+	</div>
+
+	<div id="prev-action-btn"><i class="fas fa-chevron-circle-left"></i></div>
+
+	<div id="next-action-btn"><i class="fas fa-chevron-circle-right"></i></div>
+
+	</div>
+
+	<div id="progress-bar-cover">
+
+	<div id="progress">
+
+	<div id="working">Working<i class="fas fa-sync-alt fa-spin"></i></div>
+
+	<div id="acc-success">Details Checked<i class="fas fa-check"></i><span id="init-login">Create Account <input type="submit" /> </span>
+	<input type="hidden" /> </div>
+
+	</div>
+
+	</div>
+
+	</div>
+
 	</form>
-	*@
-<div class="form-v10-content">
-	<form class="form-detail" asp-action="SignUp">
-		<div class="form-left">
-			<h2>General Infomation</h2>
-			<div class="form-row">
-				<input asp-for="Username" type="text" id="form3Example1c" class="input-text" placeholder="Username" required />
-			</div>
-			<div class="form-row">
-				<input asp-for="Password" type="password" id="form3Example4c" class="input-text" placeholder="Password" required />
-			</div>
-			<div class="form-row">
-				<input asp-for="Password" type="password" id="form3Example4c" class="input-text" placeholder="Repeat Password" required />
-			</div>
-			<div class="form-row">
-				<input asp-for="Location" type="text" id="form3Example4c" class="input-text" placeholder="Location" required />
-			</div>
-		</div>
-		<div class="form-right">
-			<h2>Contact Details</h2>
-			<div class="form-row">
-				<input asp-for="Biography" type="text" id="form3Example4c" class="input-text" placeholder="Short Bio" required />
-			</div>
-			<div class="form-group">
-				<div class="form-row">
-					<input asp-for="PhoneNumber" type="text" id="form3Example4c" class="input-text" placeholder="Phone Number" required />
-				</div>
-			</div>
-			<div class="form-row">
-				<input asp-for="Email" type="text" id="form3Example4c" class="input-text" placeholder="Email" required />
-			</div>
-			<div class="form-checkbox">
-				<label class="container">
-					<p>I do accept the <a href="#" class="text">Terms and Conditions</a> of your site.</p>
-					<input type="checkbox" name="checkbox">
-					<span class="checkmark"></span>
-				</label>
-			</div>
-			<div class="form-row-last">
-				<input type="submit" class="register" value="Sign Up">
 
-			</div>
-		</div>
-	</form>
-</div>
+	</div>*@
+<header>
+	<h1><strong>STEPOVERFLOW</strong></h1>
+	<p>Sign Up</p>
+</header>
+<section>
+	<article>
+		<form class="pure-steps" asp-action="SignUp">
+			<input type="radio" name="steps" class="pure-steps_radio" id="step-0" checked="">
+			<input type="radio" name="steps" class="pure-steps_radio" id="step-1">
+			<input type="radio" name="steps" class="pure-steps_radio" id="step-2">
+			<div class="pure-steps_group">
+				<ol>
+					<li class="pure-steps_group-step">
+						<header>
+							<h2 class="pure-steps_group-step_legend">Welcome</h2>
+							<p class="pure-steps_group-step_item"><strong style="color:#fff;">"StepOverflow"</strong> is online platform for <strong style="color:#fff;">"Step It Academy Family".</strong></p>
+							<p class="pure-steps_group-step_item">You can join us just filling some fields.</p>
+							<p class="pure-steps_group-step_item">Enjoy your time!</p>
+							<p class="pure-steps_group-step_item"></p>
+						</header>
+					</li>
+					<li class="pure-steps_group-step">
+						<fieldset>
+							<legend class="pure-steps_group-step_legend">Sign Up</legend>
+							<p class="pure-steps_group-step_item flexy-item flexy-column reverse">
+								<input type="text" asp-for="Email" placeholder="Type your email here" value="" id="input_email">
+								<label for="input_email">Email</label>
+							</p>
+							<p class="pure-steps_group-step_item flexy-item flexy-column reverse">
+								<input type="text" placeholder="Type your nick here" asp-for="Username" value="" id="input_nick">
+								<label for="input_nick">Nick</label>
+							</p>
+							<p class="pure-steps_group-step_item flexy-item flexy-column reverse">
+								<input type="password" placeholder="Type your password here" asp-for="Password" value="" id="input_password">
+								<label for="input_password">Password</label>
+							</p>
+							<p class="pure-steps_group-step_item flexy-item flexy-column reverse">
+								<input type="password" placeholder="Confirm Password" value="" asp-for="RepeatPassword" id="input_Cpassword">
+								<label for="input_Cpassword">Confirm Password</label>
+							</p>
 
-@section Scripts {
-    @{
-	await Html.RenderPartialAsync("_ValidationScriptsPartial");
-}
-}
+						</fieldset>
+					</li>
+					<li class="pure-steps_group-step flexy-item">
+						<div class="pure-steps_preload">
+							<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
+							<path d="M31.8,3.6c-0.2-0.5-0.4-0.9-0.9-1.2C30.4,2,29.7,1.8,29,1.9c-0.6,0.1-1.2,0.4-1.6,1l-8.5,11.2l0,0l-7.2,9.5l-7.1-9.4 c-0.5-0.7-1.3-1-2.1-1c-0.5,0-1,0.2-1.4,0.5c-0.5,0.4-0.9,1-1,1.7s0.1,1.2,0.5,1.8l9.1,12.1l0,0c0.1,0.2,0.3,0.3,0.4,0.4 c0.4,0.3,0.9,0.5,1.4,0.5c0.8,0,1.6-0.3,2.1-1L22.1,18l0,0l9.1-12.1C32,5.2,32.1,4.4,31.8,3.6z"></path>
+			  </svg>
+						</div>
+					</li>
+				</ol>
+				<ol class="pure-steps_group-triggers">
+					<li class="pure-steps_group-triggers_item">
+						<label for="step-0">Restart</label>
+					</li>
+					<li class="pure-steps_group-triggers_item">
+						<label for="step-1">Sign Up</label>
+					</li>
+					<li class="pure-steps_group-triggers_item">
+						<label id="submitCreateAccount" for="step-2">
+						<input type="submit" id="createAccount" for="step-2" value="Create Account" class="bg-transparent border-0" style="color:#fff; block-size:30px" />
+						</label>
+					</li>
+				</ol>
+			
+			</div>
+			<br>
+			<label for="step-0">Restart</label>
+		</form>
+	</article>
+</section>
