--- a/StepOverflow/Areas/Main/Views/Jobs/Jobs.cshtml
+++ b/StepOverflow/Areas/Main/Views/Jobs/Jobs.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+@*<table class="table">
     <thead>
         <tr>
             <th>
@@ -99,3 +99,4 @@
 }
     </tbody>
 </table>
+*@
